--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "pwa-chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
-            "file": "C:\\Users\\brand\\TestPage\\public\\Index.html",
+            "url": "http://chessgames.herokuapp.com",
+            "file": "C:\\Users\\brand\\TestPage\\public\\whiteteam.html",
             "webRoot": "${workspaceFolder}",
             "mode": "development"
         }
