--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/chessgames.heroku.com"
+    "url": "https://github.com/Boberle1.chessgame.git"
   },
   "keywords": [],
   "author": "",
