--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Boberle1.chessgame.git"
+    "url": "https://github.com/Boberle1"
   },
   "keywords": [],
   "author": "",
